--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,12 +1,35 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "share-review-web",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "dataloader": "^1.4.0",
+    "debug": "^4.1.1",
+    "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "glob": "^7.1.3",
+    "ioredis": "^4.6.2",
+    "jwks-rsa": "^1.3.0",
+    "pg": "^7.8.0",
+    "throng": "^4.0.0",
+    "typeorm": "^0.2.12"
+  },
+  "devDependencies": {
+    "@types/debug": "0.0.31",
+    "@types/express": "^4.16.1",
+    "@types/express-jwt": "0.0.41",
+    "@types/glob": "^7.1.1",
+    "@types/ioredis": "^4.0.6",
+    "@types/node": "^10.12.21",
+    "@types/throng": "^4.0.2",
+    "dotenv": "^6.2.0",
+    "nodemon": "^1.18.9",
+    "ts-node": "^8.0.2",
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.1"
+  }
 }
