prep vscode launch

--- a/packages/api/.env
+++ b/packages/api/.env
@@ -5,3 +5,5 @@ WEB_CONCURRENCY=1
 AUTH0_JWKS_URI=https://olarchy.eu.auth0.com/.well-known/jwks.json
 AUTH0_ISSUER=https://olarchy.eu.auth0.com/
 AUTH0_AUDIENCE=https://api.olarchy.com
+
+SENTRY_DSN=
