--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon"
   },
   "dependencies": {
+    "@sentry/node": "^4.5.3",
     "dataloader": "^1.4.0",
     "debug": "^4.1.1",
     "express": "^4.16.4",
@@ -15,6 +16,7 @@
     "ioredis": "^4.6.2",
     "jwks-rsa": "^1.3.0",
     "pg": "^7.8.0",
+    "reflect-metadata": "^0.1.13",
     "throng": "^4.0.0",
     "typeorm": "^0.2.12"
   },
