--- a/packages/api/.env
+++ b/packages/api/.env
@@ -1,5 +1,5 @@
 PORT=3001
-DATABASE_URL=postgresql://localhost:5432/lancelot
+DATABASE_URL=postgresql://localhost:5432/lprigent
 WEB_CONCURRENCY=1
 
 AUTH0_JWKS_URI=https://olarchy.eu.auth0.com/.well-known/jwks.json
