--- a/packages/api/.env
+++ b/packages/api/.env
@@ -6,4 +6,9 @@ AUTH0_JWKS_URI=https://olarchy.eu.auth0.com/.well-known/jwks.json
 AUTH0_ISSUER=https://olarchy.eu.auth0.com/
 AUTH0_AUDIENCE=https://api.olarchy.com
 
+AUTH0_TEST_CLIENT_ID=kS9MB4euQ1VCce1KW3m67bf7moj4IuhO
+AUTH0_TEST_CLIENT_SECRET=gflNsb8UCDVSyfz6gvcH-SdnuNqRBGb7HLW_XrvwzuAHg8sMERoRfnwXltX-s8Bl
+
 SENTRY_DSN=
+
+APOLLO_ENGINE_API_KEY=
