--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,18 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "nodemon",
+    "upgrade-interactive": "npm-check --update",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon"
+    "build": "npm run build:typescript && npm run build:graphql",
+    "build:typescript": "tsc -p .",
+    "build:graphql": "copyfiles -u 1 --verbose \"./src/**/*.graphql\" ./build"
   },
   "dependencies": {
     "@sentry/node": "^4.5.3",
+    "apollo-server-express": "^2.4.0",
     "dataloader": "^1.4.0",
     "debug": "^4.1.1",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "glob": "^7.1.3",
+    "graphql": "^14.1.1",
+    "graphql-iso-date": "^3.6.1",
+    "graphql-tag": "^2.10.1",
     "ioredis": "^4.6.2",
     "jwks-rsa": "^1.3.0",
+    "node-fetch": "^2.3.0",
     "pg": "^7.8.0",
     "reflect-metadata": "^0.1.13",
     "throng": "^4.0.0",
@@ -25,11 +34,16 @@
     "@types/express": "^4.16.1",
     "@types/express-jwt": "0.0.41",
     "@types/glob": "^7.1.1",
+    "@types/graphql": "^14.0.5",
+    "@types/graphql-iso-date": "^3.3.1",
     "@types/ioredis": "^4.0.6",
     "@types/node": "^10.12.21",
+    "@types/node-fetch": "^2.1.4",
     "@types/throng": "^4.0.2",
+    "copyfiles": "^2.1.0",
     "dotenv": "^6.2.0",
     "nodemon": "^1.18.9",
+    "npm-check": "^5.9.0",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "typescript": "^3.3.1"
