--- a/packages/api/.env
+++ b/packages/api/.env
@@ -9,6 +9,6 @@ AUTH0_AUDIENCE=https://api.olarchy.com
 AUTH0_TEST_CLIENT_ID=kS9MB4euQ1VCce1KW3m67bf7moj4IuhO
 AUTH0_TEST_CLIENT_SECRET=gflNsb8UCDVSyfz6gvcH-SdnuNqRBGb7HLW_XrvwzuAHg8sMERoRfnwXltX-s8Bl
 
-SENTRY_DSN=
+SENTRY_DSN=https://a907f8558be54c929fb68e2eb775423b@sentry.io/1389656
 
 APOLLO_ENGINE_API_KEY=
