--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run build:typescript && npm run build:graphql",
     "build:typescript": "tsc -p .",
-    "build:graphql": "copyfiles -u 1 --verbose \"./src/**/*.graphql\" ./build"
+    "build:graphql": "copyfiles -u 1 --verbose \"./src/__generated__/*.graphql\" ./build"
   },
   "dependencies": {
     "@sentry/node": "^4.5.3",
