--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gen": "gql-gen --config codegen.yml"
   },
   "devDependencies": {
+    "@sentry/cli": "^1.38.1",
     "graphql": "^14.1.1",
     "graphql-code-generator": "^0.16.1",
     "graphql-codegen-introspection": "^0.16.1",
